BUGFIX Re-added Requirements::clear() to ComplexTableField_Popup initialization to avoid including the dozens of javascript files required by CMSMain and LeftAndMain, they're not needed in a popup, and cause side-effects like missing scrollbars, weird CSS styling and generally slow loading time. BUGFIX Removed overflow:autio CSS rule in ComplexTableField.css which was causing double scrollbars in a popup. This was a hack to work around <body style="overflow:hidden"> which was set by LeftAndMain.js - this file is no longer included in the popup HTML. BUGFIX Removed unnecessary requirements from ComplexTableField_Popup: LeftAndMain.js, LeftAndMain_right.js, TableField.js, ComplexTableField.js - they will be included by the fields if necessary
git-svn-id: svn://svn.silverstripe.com/silverstripe/open/modules/sapphire/branches/2.3@74904 467b73ca-7a2a-4603-9d3b-597d59a354a9

--- a/css/ComplexTableField.css
+++ b/css/ComplexTableField.css
@@ -21,12 +21,6 @@
 	font-size: 11px;
 }
 
-/* popup */
-.ComplexTableField_ItemRequest_Popup {
-	height: 100%;
-	overflow: auto;
-}
-
 /* table */
 .ComplexTableField {
 	margin-bottom: 10px;
